# django-phonebook

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.shared.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  schema.yml  supervisord.conf
api/v1/accounts/: apps.py  forms.py  serializers.py  urls.py  views.py
api/v1/accounts/fixtures/: accounts.json  applications.json  emailaddresses.json
api/v1/accounts/migrations/: 0001_initial.py
api/v1/contacts/: admin.py  apps.py  mixins.py  models.py  serializers.py  signals.py  tests.py  urls.py  validations.py  views.py
api/v1/contacts/fixtures/: telecoms.json
api/v1/contacts/migrations/: 0001_initial.py
api/v1/contacts/templates/: test.html
api/v1/contacts/templatetags/: simple_tags.py
app/: celery.py  settings.py  urls.py
authentication/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
authentication/templates/: home_index.html  login.html  logout.html  signup.html
contacts/: admin.py  models.py
contacts/fixtures/: area_codes.json
contacts/migrations/: 0001_initial.py
core/: mixins.py  models.py  tasks.py
static/templates/: base.html
templates/mfa/recovery_codes/: index.html
