[tool.poetry]
name = "django-phonebook"
version = "0.1.0"
description = ""
authors = ["Drixler Angelo B. Historillo <drixlerangelo.historillo@ingrammicro.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "~5"
djangorestframework = "~3"
psycopg2 = "~2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
